<resources>
    <string name="app_name">Weather insights</string>
    <string name="weather_page">Weather</string>
    <string name="profile_page">Profile</string>
    <string name="horoscope_page">Horoscope</string>
    <string name="settings_page">Settings</string>
    <string name="error">error :(</string>
    <string name="bottom_menu_title">City</string>
    <string name="dialogTitle">Title</string>
    <string name="dialogMessage">Edit data?</string>
    <string name="dialogYes">Sure</string>
    <string name="dialogNo">No need</string>
    <string name="horoscope_setSign_title">Your Zodiac Sign</string>
    <string name="horoscope_setSign_descrp">Choose your zodiac sign in settings</string>
    <string name="horoscope_sign_name">Libra</string>
    <string name="horoscope_sign_descrp">\u00A0\u00A0\u00A0\u00A0This day may bring unexpected
        changes to your plans. You will feel that life is pushing you to make important
        decisions, especially in your personal relationships and career. In the morning,
        there may be minor conflicts or misunderstandings, but they will quickly disappear
        if you show patience and diplomacy, which Libras are usually known for. In the
        afternoon, the stars will favour conversations that will help clarify the situation
        and strengthen relationships.\u00A0\u00A0\u00A0\u00A0In the financial sphere, you
        should be careful - do not make hasty decisions about money, it is better to postpone
        any important purchases. Instead, focus on long-term plans.</string>
    <string name="horoscope_setSign_button">Go to settings</string>

    <string name="settings_notify_main">Notifications</string>
    <string name="settings_notify_addition">Turn on notifications</string>
    <string name="settings_notify_descrp">Turn on notifications</string>
    <string name="settings_theme_main">Dark theme</string>
    <string name="settings_theme_addition">Application theme</string>
    <string name="settings_theme_descrp">Turn on dark theme</string>
    <string name="settings_sign_title">Selected zodiac sign</string>
    <string name="settings_sign_descrp">Libra</string>

    <string name="sign_aries">Aries</string>
    <string name="sign_taurus">Taurus</string>
    <string name="sign_gemini">Gemini</string>
    <string name="sign_cancer">Cancer</string>
    <string name="sign_leo">Leo</string>
    <string name="sign_virgo">Virgo</string>
    <string name="sign_libra">Libra</string>
    <string name="sign_scorpio">Scorpio</string>
    <string name="sign_sagittarius">Sagittarius</string>
    <string name="sign_capricorn">Capricorn</string>
    <string name="sign_aquarius">Aquarius</string>
    <string name="sign_pisces">Pisces</string>

    <string name="profile_login">Login</string>
    <string name="profile_google">Sign up with Google</string>

    <string name="profile_email">Email</string>
    <string name="profile_password">Password</string>
    <string name="profile_title">My profile</string>
    <string name="profile_location">Poltava, Ukraine</string>
    <string name="profile_nameSurname">Vladyslav Bilous</string>
    <string name="profile_nameSurnameDscrp">Name Surname</string>
    <string name="profile_emailAddress">belousvladislav7@gmail.com</string>
    <string name="profile_emailDscrp">Email</string>
    <string name="profile_auth_error">Incorrect login or password</string>
    <string name="profile_birthDate">February 21, 2005</string>
    <string name="profile_birthSign">♓ Pisces</string>
    <string name="profile_goEdit">Go to edit</string>
    <string name="weather_city">Poltava</string>
    <string name="weather_country">Ukraine</string>
    <string name="weather_temperature">-4°</string>
    <string name="weather_temperatureMaxMin">Max 24° Min -26°</string>
    <string name="weather_status">Clear</string>
    <string name="weather_info">The weather is cold. It is better to dress warmly</string>
    <string name="weather_hour_now">Now</string>
    <string name="weather_day_today">Today</string>
    <string name="weather_day_weekly">Weekly forecast</string>
    <string name="weather_deleteCity">Delete city</string>
    <string name="weather_mainCity">Make default</string>
    <string name="default_notification_channel_id">default_channel_id</string>
    <string name="fcm_message">Weather Insights</string>
    <string name="msg_token_fmt">FCM registration Token: %s</string>
    <string name="default_web_client_id">448584360054-2stv4ro8rhr3c1r3a31qtjtk0pfdc803.apps.googleusercontent.com</string>
    <string name="firebase_status_fmt">Firebase UID: %s</string>
    <string name="firebase_user_management">Firebase User Management</string>

    <string name="google_status_fmt">Google User: %s</string>
    <string name="google_title_text">Google Sign In</string>
    <string name="signed_out">Signed Out</string>
    <string name="desc_firebase_lockup">Firebase logo and name</string>
    <string name="sign_out">Sign Out</string>
</resources>