<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/rounded_top"
    android:backgroundTint="?attr/dialogSignBgColor"
    android:padding="0dp">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp">

        <TextView
            style="@style/Text"
            android:textAlignment="viewStart"
            android:text="@string/settings_sign_title"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginStart="12dp"/>

    </LinearLayout>

    <View style="@style/ListLineView"/>

    <LinearLayout
        style="@style/ListItemLayout"
        android:id="@+id/signAriesLayout">

        <TextView
            style="@style/Text"
            android:text="@string/sign_aries"/>
    </LinearLayout>

    <View style="@style/ListLineView"/>

    <LinearLayout
        style="@style/ListItemLayout"
        android:id="@+id/signTaurusLayout">

        <TextView
            style="@style/Text"
            android:text="@string/sign_taurus"/>
    </LinearLayout>

    <View style="@style/ListLineView"/>

    <LinearLayout
        style="@style/ListItemLayout"
        android:id="@+id/signGeminiLayout">

        <TextView
            style="@style/Text"
            android:text="@string/sign_gemini"/>
    </LinearLayout>

    <View style="@style/ListLineView"/>

    <LinearLayout
        style="@style/ListItemLayout"
        android:id="@+id/signCancerLayout">

        <TextView
            style="@style/Text"
            android:text="@string/sign_cancer"/>
    </LinearLayout>

    <View style="@style/ListLineView"/>

    <LinearLayout
        style="@style/ListItemLayout"
        android:id="@+id/signLeoLayout">

        <TextView
            style="@style/Text"
            android:text="@string/sign_leo"/>
    </LinearLayout>

    <View style="@style/ListLineView"/>

    <LinearLayout
        style="@style/ListItemLayout"
        android:id="@+id/signVirgoLayout">

        <TextView
            style="@style/Text"
            android:text="@string/sign_virgo"/>
    </LinearLayout>

    <View style="@style/ListLineView"/>

    <LinearLayout
        style="@style/ListItemLayout"
        android:id="@+id/signLibraLayout">

        <TextView
            style="@style/Text"
            android:text="@string/sign_libra"/>
    </LinearLayout>

    <View style="@style/ListLineView"/>

    <LinearLayout
        style="@style/ListItemLayout"
        android:id="@+id/signScorpioLayout">

        <TextView
            style="@style/Text"
            android:text="@string/sign_scorpio"/>
    </LinearLayout>

    <View style="@style/ListLineView"/>

    <LinearLayout
        style="@style/ListItemLayout"
        android:id="@+id/signSagittariusLayout">

        <TextView
            style="@style/Text"
            android:text="@string/sign_sagittarius"/>
    </LinearLayout>

    <View style="@style/ListLineView"/>

    <LinearLayout
        style="@style/ListItemLayout"
        android:id="@+id/signCapricornLayout">

        <TextView
            style="@style/Text"
            android:text="@string/sign_capricorn"/>
    </LinearLayout>

    <View style="@style/ListLineView"/>

    <LinearLayout
        style="@style/ListItemLayout"
        android:id="@+id/signAquariusLayout">

        <TextView
            style="@style/Text"
            android:text="@string/sign_aquarius"/>
    </LinearLayout>

    <View style="@style/ListLineView"/>

    <LinearLayout
        style="@style/ListItemLayout"
        android:id="@+id/signPiscesLayout">

        <TextView
            style="@style/Text"
            android:text="@string/sign_pisces"/>
    </LinearLayout>
</LinearLayout>