<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="@drawable/rounded_all"
    android:backgroundTint="?attr/dialogHeaderCenterColor">

    <TextView
        style="@style/Text"
        android:id="@+id/dialogTitle"
        android:text="@string/dialogMessage"
        android:layout_gravity="center_horizontal"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:paddingBottom="16dp" />

    <Button
        style="@style/Text"
        android:id="@+id/confirmButton"
        android:text="@string/dialogYes"
        android:layout_alignParentBottom="@id/dialogTitle" />

    <Button
        style="@style/Text"
        android:id="@+id/cancelButton"
        android:text="@string/dialogNo"
        android:layout_alignBottom="@id/confirmButton"
        android:layout_toEndOf="@+id/confirmButton" />
</RelativeLayout>
