<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".HoroscopeFragment"
    style="@style/Fragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone">

        <TextView
            style="@style/TextOnPrimary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/horoscope_setSign_title"
            android:textStyle="bold"
            android:textSize="32sp"
            android:layout_gravity="center"
            android:paddingBottom="16dp"/>

        <TextView
            style="@style/TextOnPrimary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/horoscope_setSign_descrp"
            android:textSize="22sp"
            android:layout_gravity="center"
            android:paddingBottom="44dp"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/horoscope_setSign_button"
            android:textSize="22sp"
            android:layout_gravity="center"
            android:backgroundTint="@color/primaryVariant"
            android:textColor="@color/white" />

    </LinearLayout>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:scrollbars="none">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="visible">

            <ImageView
                style="@style/ImageIcon"
                android:id="@+id/iconImage"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:adjustViewBounds="true"
                android:src="@drawable/ic_sign_libra"
                android:contentDescription="@string/error"
                app:layout_constraintHeight_percent="0.25"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toTopOf="@id/zodiacSignText" />

            <TextView
                android:id="@+id/zodiacSignText"
                style="@style/TextOnPrimary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:text="@string/horoscope_sign_name"
                android:textSize="32sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/iconImage" />

            <com.codesgood.views.JustifiedTextView
                style="@style/TextOnPrimary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:lineSpacingExtra="6dp"
                android:paddingBottom="20dp"
                android:paddingHorizontal="10dp"
                android:text="@string/horoscope_sign_descrp"
                android:textSize="24sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/zodiacSignText"
                tools:ignore="VisualLintLongText" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</LinearLayout>
