<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/hourConstraintLayout"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:paddingEnd="20dp"
    tools:ignore="RtlSymmetry">

    <TextView
        style="@style/Text"
        android:id="@+id/weatherHourTextView"
        android:text="@string/weather_day_today"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/weatherImageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/error"
        android:src="@drawable/ic_weather_moon"
        android:layout_margin="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/weatherHourTextView"
        app:layout_constraintTop_toBottomOf="@+id/weatherHourTextView" />

    <TextView
        style="@style/Text"
        android:id="@+id/weatherTempTextView"
        android:text="@string/weather_temperature"
        android:textSize="26sp"
        android:textColor="@color/white"
        android:layout_margin="4dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/weatherHourTextView"
        app:layout_constraintTop_toBottomOf="@+id/weatherImageView" />

</androidx.constraintlayout.widget.ConstraintLayout>