<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".WeatherFragment"
    android:padding="0dp"
    android:background="@drawable/gradient_bcgrd_day"
    style="@style/Fragment">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:contentDescription="@string/error"
        android:scaleType="centerCrop"
        android:src="@mipmap/stars2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <TextView
        style="@style/Text"
        android:id="@+id/cityTextView"
        android:layout_marginTop="90dp"
        android:text="@string/weather_city"
        android:textColor="@color/white"
        android:textSize="45sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        style="@style/Text"
        android:id="@+id/temperatureTextView"
        android:text="@string/weather_temperature"
        android:textSize="100sp"
        android:textColor="@color/white"
        android:fontFamily="@font/opensanslight"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cityTextView" />

    <TextView
        style="@style/Text"
        android:id="@+id/weatherStatusTextView"
        android:text="@string/weather_status"
        android:textSize="22sp"
        android:textColor="@color/white"
        android:includeFontPadding="false"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/temperatureTextView" />

    <TextView
        style="@style/Text"
        android:id="@+id/tempMinMaxTextView"
        android:text="@string/weather_temperatureMaxMin"
        android:textSize="22sp"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/weatherStatusTextView" />

    <androidx.cardview.widget.CardView
        android:id="@+id/tempHourCardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginHorizontal="15dp"
        android:layout_marginTop="15dp"
        android:backgroundTint="#9882E2"
        app:cardCornerRadius="15dp"
        app:cardElevation="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tempMinMaxTextView" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingStart="18dp"
            android:paddingEnd="0dp"
            android:paddingTop="8dp"
            android:paddingBottom="18dp">

            <TextView
                style="@style/Text"
                android:id="@+id/hourInfoTextView"
                android:text="@string/weather_info"
                android:textColor="@color/white"/>

            <View
                style="@style/ListLineView"
                android:id="@+id/hourLineView"
                android:layout_height="0.5dp"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="18dp"
                android:background="@color/white"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/hourRecyclerView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/tempDayCardView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_marginHorizontal="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="20dp"
        android:backgroundTint="#9882E2"
        app:cardCornerRadius="15dp"
        app:cardElevation="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tempHourCardView"
        app:layout_constraintBottom_toBottomOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingStart="18dp"
            android:paddingEnd="18dp"
            android:paddingTop="8dp"
            android:paddingBottom="18dp">

            <TextView
                style="@style/Text"
                android:id="@+id/dayInfoTextView"
                android:text="@string/weather_day_weekly"
                android:textColor="@color/white"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/dayRecyclerView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>