<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/dayConstraintLayout"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content" >

    <View
        style="@style/ListLineView"
        android:id="@+id/dayLineView"
        android:layout_height="0.5dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="18dp"
        android:background="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        style="@style/Text"
        android:id="@+id/weatherDayTextView"
        android:text="@string/weather_day_today"
        android:textColor="@color/white"
        android:layout_marginTop="12dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/dayLineView"/>

    <ImageView
        android:id="@+id/weatherImageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/error"
        android:src="@drawable/ic_weather_moon"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="10dp"
        app:layout_constraintEnd_toStartOf="@+id/dayMinTextView"
        app:layout_constraintTop_toTopOf="@+id/dayLineView"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <TextView
        style="@style/Text"
        android:id="@+id/dayMinTextView"
        android:layout_marginTop="12dp"
        android:textColor="@color/white"
        android:textSize="26sp"
        android:text="@string/weather_temperature"
        app:layout_constraintEnd_toStartOf="@+id/temperatureRange"
        app:layout_constraintTop_toTopOf="@+id/dayLineView"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <SeekBar
        style="@style/SeekBar"
        android:id="@+id/temperatureRange"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="8dp"
        android:enabled="false"
        android:max="100"
        android:progress="50"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/dayMaxTextView"
        app:layout_constraintTop_toTopOf="@id/dayLineView" />

    <TextView
        style="@style/Text"
        android:id="@+id/dayMaxTextView"
        android:text="@string/weather_temperature"
        android:textSize="26sp"
        android:textColor="@color/white"
        android:layout_marginTop="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="@+id/dayLineView"/>
</androidx.constraintlayout.widget.ConstraintLayout>